--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,4 @@
+# CMakeLists.txt
 cmake_minimum_required(VERSION 3.10)
-
-project(HelloWorld)
-
-add_executable(HelloWorld main.cpp)
-
-install(TARGETS HelloWorld DESTINATION bin)
+project(hello_world)
+add_executable(hello_world main.cpp)
