--- a/.github/workflows/crs.yml
+++ b/.github/workflows/crs.yml
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64-linux-gnu, x86_64-apple-darwin, x86_64-w64-mingw32]
+        target: [x86_64-linux-gnu, x86_64-w64-mingw32]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       
       - name: Install dependencies
-        run: sudo apt-get install gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 gcc-aarch64-linux-gnu g++-aarch64-linux-gnu gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+        run: sudo apt-get install gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
       
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/toolchain-${{matrix.target}}.cmake
